--- a/Mission_to_Mars_Challange.ipynb
+++ b/Mission_to_Mars_Challange.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3355490c",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-07-12 23:53:37,744 INFO Note: NumExpr detected 12 cores but \"NUMEXPR_MAX_THREADS\" not set, so enforcing safe limit of 8.\n",
-      "2022-07-12 23:53:37,747 INFO NumExpr defaulting to 8 threads.\n"
+      "2022-07-14 10:11:03,938 INFO Note: NumExpr detected 12 cores but \"NUMEXPR_MAX_THREADS\" not set, so enforcing safe limit of 8.\n",
+      "2022-07-14 10:11:03,942 INFO NumExpr defaulting to 8 threads.\n"
      ]
     }
    ],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "30dd617d",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-07-12 23:53:38,276 INFO ====== WebDriver manager ======\n"
+      "2022-07-14 10:11:17,193 INFO ====== WebDriver manager ======\n"
      ]
     },
     {
@@ -62,7 +62,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-07-12 23:53:38,283 INFO Current google-chrome version is 103.0.5060\n"
+      "2022-07-14 10:11:17,200 INFO Current google-chrome version is 103.0.5060\n"
      ]
     },
     {
@@ -76,7 +76,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-07-12 23:53:38,285 INFO Get LATEST chromedriver version for 103.0.5060 google-chrome\n"
+      "2022-07-14 10:11:17,201 INFO Get LATEST chromedriver version for 103.0.5060 google-chrome\n"
      ]
     },
     {
@@ -90,7 +90,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-07-12 23:53:38,485 INFO About to download new driver from https://chromedriver.storage.googleapis.com/103.0.5060.53/chromedriver_win32.zip\n"
+      "2022-07-14 10:11:17,385 INFO About to download new driver from https://chromedriver.storage.googleapis.com/103.0.5060.53/chromedriver_win32.zip\n"
      ]
     },
     {
@@ -104,7 +104,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-07-12 23:53:39,036 INFO Driver has been saved in cache [C:\\Users\\ivorf\\.wdm\\drivers\\chromedriver\\win32\\103.0.5060.53]\n"
+      "2022-07-14 10:11:17,905 INFO Driver has been saved in cache [C:\\Users\\ivorf\\.wdm\\drivers\\chromedriver\\win32\\103.0.5060.53]\n"
      ]
     }
    ],
@@ -161,7 +161,7 @@
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\">All About the Laser (and Microphone) Atop Mars 2020, NASA's Next Rover</div>"
+       "<div class=\"content_title\">HiRISE Views NASA's InSight and Curiosity on Mars</div>"
       ]
      },
      "execution_count": 5,
@@ -182,7 +182,7 @@
     {
      "data": {
       "text/plain": [
-       "\"All About the Laser (and Microphone) Atop Mars 2020, NASA's Next Rover\""
+       "\"HiRISE Views NASA's InSight and Curiosity on Mars\""
       ]
      },
      "execution_count": 6,
@@ -205,7 +205,7 @@
     {
      "data": {
       "text/plain": [
-       "'SuperCam is a rock-vaporizing instrument that will help scientists hunt for Mars fossils.'"
+       "'New images taken from space offer the clearest orbital glimpse yet of InSight as well as a view of Curiosity rolling along.'"
       ]
      },
      "execution_count": 7,
@@ -222,26 +222,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "692730e5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Featured Images"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "87c7a39f",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
    "id": "89d08bf9",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Featured Images\n",
     "# Visit URL\n",
     "url = 'https://spaceimages-mars.com'\n",
     "browser.visit(url)"
@@ -249,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "192cdef1",
    "metadata": {},
    "outputs": [],
@@ -261,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "aa573ecf",
    "metadata": {},
    "outputs": [],
@@ -273,17 +258,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "058fa569",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'image/featured/mars1.jpg'"
+       "'image/featured/mars3.jpg'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,17 +281,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "fc0f66a5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://spaceimages-mars.com/image/featured/mars1.jpg'"
+       "'https://spaceimages-mars.com/image/featured/mars3.jpg'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "16b46364",
    "metadata": {},
    "outputs": [
@@ -405,7 +390,7 @@
        "Temperature:                -87 to -5 °C      -88 to 58°C"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "df040aa6",
    "metadata": {},
    "outputs": [
@@ -429,7 +414,7 @@
        "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars</th>\\n      <th>Earth</th>\\n    </tr>\\n    <tr>\\n      <th>description</th>\\n      <th></th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Mars - Earth Comparison</th>\\n      <td>Mars</td>\\n      <td>Earth</td>\\n    </tr>\\n    <tr>\\n      <th>Diameter:</th>\\n      <td>6,779 km</td>\\n      <td>12,742 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg</td>\\n      <td>5.97 × 10^24 kg</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2</td>\\n      <td>1</td>\\n    </tr>\\n    <tr>\\n      <th>Distance from Sun:</th>\\n      <td>227,943,824 km</td>\\n      <td>149,598,262 km</td>\\n    </tr>\\n    <tr>\\n      <th>Length of Year:</th>\\n      <td>687 Earth days</td>\\n      <td>365.24 days</td>\\n    </tr>\\n    <tr>\\n      <th>Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n      <td>-88 to 58°C</td>\\n    </tr>\\n  </tbody>\\n</table>'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,13 +425,152 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "id": "ef316e03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# D1: Scrape High-Resolution Mars’ Hemisphere Images and Titles"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
+   "id": "c95af1f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Hemispheres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ab4708dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. Use browser to visit the URL \n",
+    "url = 'https://marshemispheres.com/'\n",
+    "\n",
+    "browser.visit(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7f02bdfb",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# 2. Create a list to hold the images and titles.\n",
+    "hemisphere_image_urls = []\n",
+    "\n",
+    "# 3. Write code to retrieve the image urls and titles for each hemisphere.\n",
+    "\n",
+    "for hemis in range(4):\n",
+    "    \n",
+    "    hemisphere = {}\n",
+    "    \n",
+    "    # find full image link and click\n",
+    "    browser.links.find_by_partial_text('Hemisphere')[hemis].click()\n",
+    "    \n",
+    "    # Parse the HTML\n",
+    "    html = browser.html\n",
+    "    hemi_soup = soup(html,'html.parser')\n",
+    "    \n",
+    "    # Scrape title and url\n",
+    "    title = hemi_soup.find('h2', class_='title').text\n",
+    "    img_url = hemi_soup.find('li').a.get('href')\n",
+    "    \n",
+    "    # save the results into a dict and appending it to the list\n",
+    "    \n",
+    "    hemisphere = {\n",
+    "        'img_url' : f'https://marshemispheres.com/{img_url}',\n",
+    "        'title': title\n",
+    "    }\n",
+    "#     hemisphere['img_url'] = f'https://marshemispheres.com/{img_url}'\n",
+    "#     hemisphere['title'] = title\n",
+    "    hemisphere_image_urls.append(hemisphere)\n",
+    "    \n",
+    "    # Browse back \n",
+    "    browser.back()\n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "81a34cc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'img_url': 'https://marshemispheres.com/images/full.jpg',\n",
+       "  'title': 'Cerberus Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://marshemispheres.com/images/schiaparelli_enhanced-full.jpg',\n",
+       "  'title': 'Schiaparelli Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://marshemispheres.com/images/syrtis_major_enhanced-full.jpg',\n",
+       "  'title': 'Syrtis Major Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://marshemispheres.com/images/valles_marineris_enhanced-full.jpg',\n",
+       "  'title': 'Valles Marineris Hemisphere Enhanced'}]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 4. Print the list that holds the dictionary of each image url and title.\n",
+    "hemisphere_image_urls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "554849bb",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 5. Quit the browser\n",
     "browser.quit()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0c597ea",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9eae7db9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef4be282",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "049a94c5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -615,11 +739,19 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8e276d4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.7.13 ('PythonData')",
    "language": "python",
    "name": "python3"
   },
@@ -634,6 +766,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "4fd33ce1ff4d9090cc2e9b38128c081d528474b25de0c57e8c9e6d4b37876852"
+   }
   }
  },
  "nbformat": 4,
